se agregan cambios a la tipografia y estilo a la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,11 +11,11 @@
 
     <div id="container">
 
-        <div>
+        <div id="cabecera">
 
             Hyperblog
 
-            <span id="tagline"> Tublog de cabecera</span>
+            <span id="tagline"> Tu blog de cabecera</span>
 
         </div>
 
@@ -26,6 +26,11 @@
             <p>y este es el parrafo en el cual explicaremos un poco sobre
                 la vida de Juan David Forero y de como aprendio las cosas
                 increibles que se puede haer con ramas</p>
+
+            <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o
+                salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+
+            <p>Suscribete y dale like</p>
 
         </div>
 
