Se cambia el titulo del h1 y el color de las letras

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,7 +21,7 @@
 
         <div id="post">
 
-            <h1>La historia de Juan David Forero</h1>
+            <h1>La historia de Juan David Forero el mejor</h1>
 
             <p>y este es el parrafo en el cual explicaremos un poco sobre
                 la vida de Juan David Forero y de como aprendio las cosas
