--- a/blogpost.html
+++ b/blogpost.html
@@ -1,41 +1,34 @@
 <html>
-
-<head>
-
+  <head>
     <title>Bienvenido a Hyperblog</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css" />
+  </head>
 
-</head>
-
-<body>
-
+  <body>
     <div id="container">
+      <div id="cabecera">
+        Hyperblog
 
-        <div id="cabecera">
+        <span id="tagline"> Tu blog de cabecera</span>
+      </div>
 
-            Hyperblog
+      <div id="post">
+        <h1>La historia de Juan David Forero Rodriguez</h1>
 
-            <span id="tagline"> Tu blog de cabecera</span>
+        <p>
+          y este es el parrafo en el cual explicaremos un poco sobre la vida de
+          Juan David Forero y de como aprendio las cosas increibles que se puede
+          haer con ramas
+        </p>
 
-        </div>
+        <p>
+          Los blogs son la mejor forma de compartir información y tus ideas.
+          Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un
+          rockstar. Pero estadísticamente no lo eres.... por ahora.
+        </p>
 
-        <div id="post">
-
-            <h1>La historia de Juan David Forero Rodriguez</h1>
-
-            <p>y este es el parrafo en el cual explicaremos un poco sobre
-                la vida de Juan David Forero y de como aprendio las cosas
-                increibles que se puede haer con ramas</p>
-
-            <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o
-                salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-
-            <p>Suscribete y dale like</p>
-
-        </div>
-
+        <p>Suscribete y dale like</p>
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
